2001-10-07  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc:  Show text by owner of object if gump not open.
	* actors.cc,gameclk.cc: check_temperature().
	* actors.cc (public): Figure_warmth() written (but not tested).
	* gumps/Stats_gump.cc (Stats_gump): Show frame for temperature if
	Avatar is in frozen region.

2001-10-06  Jeff Freedman  <jeff@amy.nerble.net>

	* actorio.cc,intrinsics.cc,actors.h,flags.h,etc:  Started
	implementing temperature and 'freeze' flag.  No effect yet.

2001-10-06  Dancer Vesperman  <dancer@users.sourceforge.net>

	* actors.cc: Cast conversions
	* gamedat.cc: ditto
	* gamewin.cc: ditto
	* npcnear.cc: ibid
	* schedule.cc: as above

2001-10-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.be: fixed typo

2001-10-05  Dancer Vesperman  <dancer@users.sourceforge.net>

	* actors.cc: Cast conversions
	* actions.cc: ditto

2001-10-04  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.{cc,h},ucinternal.cc:  terminate() added to
	remove existing scripts for an object if 'no_halt' isn't set.

2001-10-03  Jeff Freedman  <jeff@amy.nerble.net>

	* paths.cc (Actor_pathfinder_client): Handles 'dist' option now.
	* actors.cc (follow()):  Another attempt to avoid hanging/slowdowns.

	* actors.cc,monstinf.cc:  poison_safe detected.
	* audio/Audio.cc (Audio): Disable audio if device can't be opened.

	* gamewin.cc: You can always read a sign.
	* drag.cc: Fixed another world-wrapping crash.
	* ucsched.cc:  Only activate 3 kinds of eggs.

2001-10-02  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc (public): Handle more SI books.

2001-10-01  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc,etc:  Separate dead_party list for dead
	companions.

2001-09-30  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Offsets in obj_sprite_effect() are negated.
	* usecode/bgintrinsics.h, etc: npc_sprite_effect() becomes
	obj_sprite_effect().
	* readnpcs.cc: Skip all the extra trappers.